fix: added style for courses list on mobile devices

--- a/styles/small.css
+++ b/styles/small.css
@@ -199,6 +199,9 @@ button.active:hover {
 
 #listCourses {
     margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .course {
